--- a/AZSChool/AZSchool.WEB/Views/Home/Index.cshtml
+++ b/AZSChool/AZSchool.WEB/Views/Home/Index.cshtml
@@ -262,7 +262,7 @@
                                 </div>
                                 <div class="u-container-style u-layout-cell u-size-20 u-size-30-md u-layout-cell-2">
                                     <div class="u-container-layout u-valign-middle u-container-layout-3">
-                                        <h2 class="u-custom-font u-font-oswald u-text u-text-3">Михаил Семёнов</h2>
+                                        <h2 class="u-custom-font u-font-oswald u-text u-text-3">Анастасия Семёнова</h2>
                                         <h6 class="u-text u-text-4">АРХИТЕКТОР ВЫЧИСЛИТЕЛЬНЫХ СИСТЕМ</h6>
                                         <p class="u-text u-text-5">Sample text. Lorem ipsum dolor sit amet, consectetur adipiscing elit nullam nunc justo sagittis suscipit ultrices.</p>
                                         <div class="u-social-icons u-spacing-10 u-social-icons-1">
